[package]
name = "qcrypt"
version = "1.24.6"
authors = ["Soul78"]
edition = "2024"

[dependencies]
ml-kem = "0.2.0"
rand = "0.8"
aes-gcm = { version = "0.10", features = ["stream"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
clap = { version = "4", features = ["derive"] }
pem = "3.0.6"
hkdf = "0.13.0"
sha2 = "0.11.0"
memsec = "0.7.0"
rpassword = "7.3"
argon2 = "0.5"
crossbeam-channel = "0.5"
indicatif = "0.17"
blake3 = "1.5"
obfstr = "0.4"
ureq = { version = "2.9", features = ["tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
base64 = "0.22.1"
secp256k1 = { version = "0.31.1", features = ["rand", "recovery"] }
sha3 = "0.12.0"
hex = "0.4.3"
eframe = "0.29.0"
egui = "0.29.0"
chrono = "0.4.45"
image = "0.25.10"
yubikey-hmac-otp = "0.10.2"
rfd = "0.14"

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
